--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "hardhat-project",
+  "name": "omni-hackathon",
+  "scripts": {
+    "deploy": "npx hardhat run scripts/deploy.js --network ropsten",
+    "mint" : "node scripts/minting.js",
+    "verify" : "npx hardhat verify --network ropsten "
+  },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^2.1.7",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "chai": "^4.3.4",
-    "dotenv": "^10.0.0",
+ 
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
@@ -23,6 +28,12 @@
     "solidity-coverage": "^0.7.17"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.3.3"
+    "@openzeppelin/contracts": "^4.3.3",
+    "axios": "^0.23.0",
+    "fs": "0.0.1-security",
+    "dotenv": "^10.0.0",
+    "@openzeppelin/test-helpers": "^0.5.15",
+    "@pinata/ipfs-gateway-tools": "^1.1.6",
+    "form-data": "^4.0.0"
   }
 }
